<resources>
    <string name="app_name">MEDICARE</string>
    <string name="username">   Enter your username</string>
    <string name="password">   Enter your password</string>
    <string name="email">  Enter your email address</string>
    <string name="phone">  Enter your phone number</string>
    <string name="fullname">  Enter your full name</string>
    <string name="artikel">

1.Virtual Reality Workouts \n
Di tahun 2023, virtual reality (VR) workouts akan menjadi arus utama karena perangkat berteknologi tinggi ini semakin populer. Layanan augmented reality dan VR kemungkinan akan terus berkembang.
\n\n
2.Latihan Mobilitas \n
Olahraga lain yang juga akan jadi tren pada 2023 adalah latihan mobilitas. Latihan ini bertujuan untuk meningkatkan kemampuan menggerakkan otot atau kelompok otot dengan aman melalui berbagai gerakan dalam sendi.Manfaatnya lebih lebih dari sekadar membuat tubuh lebih fleksibel. Mengembangkan mobilitas dapat membantu meningkatkan gerakan fungsional, mencegah cedera, mengurangi rasa sakit, dan banyak lagi.
\n\n
3.Latihan Postur \n
Latihan ini dapat memperbaiki postur tubuh untuk  kehidupan sehari-hari yang nyaman dan bebas rasa sakit. Pada kehidupan WFH, latihan postur melatih dan memperkuat otot-otot yang menopang tulang belakang dan kompleks pinggul lumbopelvic. Ini merupakan kunci dalam menjaga tubuh tetap tegak.
\n\n
4.Latihan Biofilia \n
Merupakan salah satu olahraga yang akan tren di 2023. Ini berpusat pada hubungan dengan alam, baik secara fisik maupun emosional.Paparan ke alam memberikan berbagai manfaat kesehatan dan kebugaran, termasuk peningkatan suasana hati, produktivitas, peningkatan fungsi kognitif dan peningkatan pemikiran kreatif. Berolahraga di luar juga berdampak pada tingkat stres.
\n\n
5.Latihan Beban Wanita \n
Jenis latihan ini juga diketahui dapat mengurangi risiko penyakit jantung dan diabetes. Ada juga kesalahpahaman bahwa jenis latihan ini hanya akan membentuk otot. Padahal, ini juga dapat meningkatkan jumlah kalori yang terbakar setelah istirahat.
    </string>
</resources>