<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registrasiPage">

    <TextView
        android:id="@+id/txt_medicare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/nunito_sans_semibold"
        android:text="MEDICARE"
        android:textColor="#D41249"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_letsbepartofus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/numans"
        android:text="Let's be part of us!"
        android:textColor="#2B3467"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_medicare" />

    <LinearLayout
        android:layout_width="347dp"
        android:layout_height="585dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_letsbepartofus">

        <TextView
            android:id="@+id/txt_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Full Name"
            android:fontFamily="@font/numans"
            android:textColor="#2B3467"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/input_fullname"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_input_data"
            android:ems="10"
            android:hint="@string/fullname"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/txt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/numans"
            android:text="Phone"
            android:textColor="#2B3467"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/input_phone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_input_data"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/numans"
            android:text="Email"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_input_data"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/txt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/numans"
            android:text="Username"
            android:layout_marginTop="18dp"
            android:textColor="#2B3467"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_input_data"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/numans"
            android:text="Password"
            android:textColor="#2B3467"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_input_data"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="142dp"
            android:layout_height="43dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/btn_bluedark"
            android:text="Sign Up"
            android:fontFamily="@font/numans"
            android:textAllCaps="false"
            android:textColor="@color/white"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <ImageView
        android:id="@+id/img_bubble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bubble_register" />

</androidx.constraintlayout.widget.ConstraintLayout>